# ambiente_inteligente

./: .env  README.md  desligar_req_post.py  ligar_req_post.py  pyproject.toml  requests.http  requirements.txt
arquivosorig/: messages.proto
client/: app.py  client.py  cliente.py  cliente4.py  cliente5.py  clientenovo.py  messages_final_pb2.py  site.py
devices/: Environment changes - ambiente_inteligente  arcondicionado.py  atuador2.py  bloco123.py  bloco706.py  bloco727.py  blocoA.py  blocoB.py  blocoC.py  blocoD.py  device.py  lampada.py  sensor_706.py  sensor_727.py  sensor_temperatura.py  utils.py
gateway/: Gateway2.py  broker_announcer.py  broker_multicast.py  gate3.py  gateway copy.py  gateway.py  gateway2.py  gateway4.py  gateway5.py  gatewayrabbit  gtw.py  gtw2.py  messages_pb2.py  novogtw.py  sensor_pb2.py  sensor_pb2_grpc.py
interface-web/: app.py
proto/: messages.proto  messages___.proto  messages_final.proto  messages_final_pb2.py  messages_pb2.py  msgs.proto  sensor.proto
server/: main.py  messages_pb2.py  test.py
